<resources>
    <string name="app_name">MyTestProject</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_success">Login successful</string>
    <string name="login_failed">Incorrect username/password</string>
    <string name="or">or</string>
    <string name="use_biometric">Use Biometric</string>

    <string name="add_item">Add item</string>
    <string name="sl_no">Sl. No.</string>
    <string name="item">Item</string>
    <string name="quantity">Qty.</string>
    <string name="rate">Rate</string>
    <string name="gst">GST</string>
    <string name="item_name">Item Name</string>
    <string name="verifiy_identity">Verify your identity</string>
    <string name="verify_biometric_message">Confirm your screen lock pattern, PIN, password or fingerprint</string>
    <string name="use_credential">Use Credential</string>
    <string name="error_no_biometric_hardware">Sorry. It seems your device has no biometric hardware</string>
    <string name="login">Login</string>
    <string name="item_added">Item</string>
    <string name="title_activity_first_time">FirstTimeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="first_time">First Time</string>
</resources>